--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
-body {
-  background-color: gold;
+/* == ================================================= 
+|        (0.1) PSEUDO-CLASA ":ROOT"
+|          (DEF. VAR. 'GLOBALE' pPERSONALIZATE)
+   =================================================== */
+:root {
+  --culoare-principala: #2584ff;
+  --culoare-secundara: #00d9ff;
+  --culoare-accent: #ff3400;
+  --culoare-titluri: #1b0760;
+  --culoare-corp: #918ca4;
 }
