--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 /* == ================================================= 
+|               (I) MOBIL  
+   =================================================== */
+/* == ================================================= 
 |        (0.1) PSEUDO-CLASA ":ROOT"
 |          (DEF. VAR. 'GLOBALE' pPERSONALIZATE)
    =================================================== */
@@ -8,4 +11,143 @@
   --culoare-accent: #ff3400;
   --culoare-titluri: #1b0760;
   --culoare-corp: #918ca4;
+}
+
+/*  
+
+
+
+
+*/ /* == ============================================== 
+|        (0.2) ELEM. "HTML"
+|     (DEF. DIMENSIUNII DE BAZA AL FONTULUI)
+   =================================================== */
+html {
+  /* FONT INITIAL: '10PX' , ADICA ('16PX * 62.5%)  ' */
+  font-size: 62.5%;
+}
+
+/*  
+
+
+
+
+*/ /* == ============================================== 
+|        (0.3) ELEM. "BODY"
+|          (DEF. FONTURI TEXT CORP)
+   =================================================== */
+body {
+  font-family: Inter, Arial, Helvetica, sans-serif;
+  font-size: 2.4rem;
+
+  /* INALTIME LINIE - 1.5 DIN DIMENSIUNEA FONTULUI CURENT*/
+  line-height: 1.5;
+  color: var(--culoare-corp);
+}
+
+/*  
+
+
+
+
+*/ /* == ============================================== 
+|        (0.4) ELEM. "H1, H2, H3"
+|          (DEF. FONTURI TEXT TITLURI)
+   =================================================== */
+h1,
+h2,
+h3 {
+  color: var(--culoare-titluri);
+  margin-bottom: 1rem;
+}
+
+/*  
+
+
+
+
+*/ /* == ============================================== 
+|        (0.5.1) ELEM. "H1"
+|          (DEF. DIM. FONTURI TEXT TITLURI)
+   =================================================== */
+h1 {
+  font-size: 7rem;
+}
+
+/*  
+
+
+
+
+*/ /* == ============================================== 
+|        (0.5.2) ELEM. "H2"
+|          (DEF. DIM. FONTURI TEXT TITLURI)
+   =================================================== */
+h2 {
+  font-size: 4rem;
+}
+
+/*  
+
+
+
+
+*/ /* == ============================================== 
+|        (0.5.3) ELEM. "H3"
+|          (DEF. DIM. FONTURI TEXT TITLURI)
+   =================================================== */
+h3 {
+  font-size: 3rem;
+}
+
+/*  
+
+
+
+
+*/ /* == ============================================== 
+|        (0.6) ELEM. "P"
+|          (DEF. MARGINI TOP)
+   =================================================== */
+p {
+  margin-top: 0;
+}
+
+/*  
+
+
+
+
+*/ /* == ============================================== 
+|                (II) DESKTOP  
+|         ( @MEDIA  QUERY (LATIME  MINIMA: 1024PX) )
+   =================================================== */
+@media screen and (min-width: 1024px) {
+  /* == ============================================== 
+  |        (0.1) ELEM. "BODY"
+   =================================================== */
+  body {
+    font-size: 1.8rem;
+  }
+
+  /* == ============================================== 
+  |        (0.2.1) ELEM. "H1"
+   =================================================== */
+  h1 {
+    font-size: 8rem;
+  }
+
+  /* == ============================================== 
+  |        (0.2.2) ELEM. "H2"
+   =================================================== */
+  h2 {
+    font-size: 4rem;
+  }
+
+  /* == ============================================== 
+  |        (0.2.3) ELEM. "H3"
+   =================================================== */
+  h3 {
+    font-size: 2.4rem;
+  }
 }
