(4) COMPONENTA 'LINK-SAGEATA'

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,5 @@
 /* == ================================================= 
-|               (I) MOBIL  
-   =================================================== */
-/* == ================================================= 
-|        (0.1) PSEUDO-CLASA ":ROOT"
+|        (0) PSEUDO-CLASA ":ROOT"
 |          (DEF. VAR. 'GLOBALE' pPERSONALIZATE)
    =================================================== */
 :root {
@@ -14,12 +11,13 @@
 }
 
 /*  
+////////////////////////////////////////////////////////
 
+           (I) TIPOGRAFIE  [MOBILE]
 
-
-
+\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
 */ /* == ============================================== 
-|        (0.2) ELEM. "HTML"
+|        (1.1) ELEM. "HTML"
 |     (DEF. DIMENSIUNII DE BAZA AL FONTULUI)
    =================================================== */
 html {
@@ -33,7 +31,7 @@ html {
 
 
 */ /* == ============================================== 
-|        (0.3) ELEM. "BODY"
+|        (1.2) ELEM. "BODY"
 |          (DEF. FONTURI TEXT CORP)
    =================================================== */
 body {
@@ -51,7 +49,7 @@ body {
 
 
 */ /* == ============================================== 
-|        (0.4) ELEM. "H1, H2, H3"
+|        (1.3) ELEM. "H1, H2, H3"
 |          (DEF. FONTURI TEXT TITLURI)
    =================================================== */
 h1,
@@ -67,7 +65,7 @@ h3 {
 
 
 */ /* == ============================================== 
-|        (0.5.1) ELEM. "H1"
+|        (1.3.1) ELEM. "H1"
 |          (DEF. DIM. FONTURI TEXT TITLURI)
    =================================================== */
 h1 {
@@ -80,7 +78,7 @@ h1 {
 
 
 */ /* == ============================================== 
-|        (0.5.2) ELEM. "H2"
+|        (1.3.2) ELEM. "H2"
 |          (DEF. DIM. FONTURI TEXT TITLURI)
    =================================================== */
 h2 {
@@ -93,7 +91,7 @@ h2 {
 
 
 */ /* == ============================================== 
-|        (0.5.3) ELEM. "H3"
+|        (1.3.3) ELEM. "H3"
 |          (DEF. DIM. FONTURI TEXT TITLURI)
    =================================================== */
 h3 {
@@ -106,7 +104,7 @@ h3 {
 
 
 */ /* == ============================================== 
-|        (0.6) ELEM. "P"
+|        (1.4) ELEM. "P"
 |          (DEF. MARGINI TOP)
    =================================================== */
 p {
@@ -118,10 +116,11 @@ p {
 
 
 
-*/ /* == ============================================== 
-|                (II) DESKTOP  
+*/ /* 
+   ////////////////////////////////////////////////////
+|                (I) TIPOGRAFIE  [DESKTOP]   
 |         ( @MEDIA  QUERY (LATIME  MINIMA: 1024PX) )
-   =================================================== */
+   \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
 @media screen and (min-width: 1024px) {
   /* == ============================================== 
   |        (0.1) ELEM. "BODY"
@@ -149,5 +148,97 @@ p {
    =================================================== */
   h3 {
     font-size: 2.4rem;
+  }
+}
+
+/* 
+
+
+
+
+*/ /*  
+////////////////////////////////////////////////////////
+
+           (II) LINK-URI  (MOBILE)
+
+\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+*/ /* == ============================================== 
+|        (2.1) ELEM. "A"
+|     
+   =================================================== */
+a {
+  /* DEZACTIVAM  SUBLINIEREA LINK-URILOR*/
+  text-decoration: none;
+}
+
+/*  
+
+
+
+
+*/ /* == ============================================== 
+|         (2.2) CLS. "LINK-SAGEATA"
+|          
+   =================================================== */
+.link-sageata {
+  /* CULOARE LINK */
+  color: var(--culoare-accent);
+
+  /* TRANSFORMAM CARACTERELE = IN "LITERE MARI" */
+  text-transform: uppercase;
+
+  /* DIM. FONT LINK */
+  font-size: 2rem;
+
+  /* INGROSAM  CARACTERELE */
+  font-weight: bold;
+}
+
+/*  
+
+
+
+
+*/ /* == ============================================== 
+|         (2.2.1) PSEUDO-CLS. "::AFTER"
+|    (PT. ADAUGAREA "SAGETII" DUPA CUVANTUL "LINK")   
+   =================================================== */
+.link-sageata::after {
+  /* ADAUGARE "CONTINUT" = "ICON"  */
+  content: "-->";
+  margin-left: 5px;
+
+  /* ANIMAREA "TRANZITIEI" = "MARGIN"   */
+  transform: margin 0.15s;
+}
+
+/*  
+
+
+
+
+*/ /* == ============================================== 
+|         (2.2.2) PSEUDO-CLS. ":HOVER::AFTER"
+|    (PT. EFECT ASUPRA "SAGETII" DUPA CUVANTUL "LINK")   
+   =================================================== */
+.link-sageata:hover:after {
+  /* MARIM "MARGINEA LA STANGA"   */
+  margin-left: 10px;
+}
+
+/*  
+
+
+
+
+*/ /* 
+   ////////////////////////////////////////////////////
+|                (II) LINK-URI  [DESKTOP]   
+|         ( @MEDIA  QUERY (LATIME  MINIMA: 1024PX) )
+   \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
+@media screen and (min-width: 1024px) {
+  .link-sageata {
+    /* DIM. FONT LINK - PE [DESKTOP] */
+    font-size: 1.5rem;
   }
 }
