--- a/css/style.css
+++ b/css/style.css
@@ -414,3 +414,66 @@ a {
     padding-left: 0;
   }
 }
+
+/*
+
+
+
+
+*/ /*  
+////////////////////////////////////////////////////////
+
+           (V) ICONS (PICTOGRAME)  [MOBILE]
+
+\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+*/ /* == ============================================== 
+|          (5.1) CLS. "ICON"
+|     (PT. DIMENSIONAREA ICON-URILOR)
+   =================================================== */
+.icon {
+  width: 40px;
+  height: 40px;
+}
+
+/*
+
+
+
+
+*/ /* == ============================================== 
+|          (5.2) CLS. "ICON"
+|     (PT. CULOAREAS ICON-URILOR)
+   =================================================== */
+.icon--principal {
+  /* PROP. SVG "FILL" (IN LOC DE "COLOR")   */
+  fill: var(--culoare-principala);
+}
+
+/*
+
+
+
+
+*/ /* == ============================================== 
+|          (5.3) CLS. "ICON-CONTAINER"
+|         (PT. CREARE CERC IN JURUL ICON-ULUI)
+   =================================================== */
+.icon-container {
+  /* background-color: gold; */
+  background-color: #f3f9fa;
+
+  width: 64px;
+  height: 64px;
+
+  /* IL ROTUNJIM */
+  border-radius: 100%;
+
+  /* AFISAREA CENTRATA = "FLEX IN LINIE" */
+  display: inline-flex;
+
+  /* ALINIEREA FATA DE "AXA ORIZONTALA" */
+  justify-content: center;
+
+  /* ALINIEREA FATA DE "AXA VERTICALA" */
+  align-items: center;
+}
