--- a/css/style.css
+++ b/css/style.css
@@ -1044,3 +1044,62 @@ a {
     font-size: 1.7rem;
   }
 }
+
+
+/*
+
+
+
+
+*/ /*  
+////////////////////////////////////////////////////////
+
+           (X) MODELUL "OBIECT MEDIA"   [MOBILE]
+
+\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+*/ /* == ============================================== 
+|          (10.1) CLS. "MEDIA"
+|     
+   =================================================== */
+.media{
+  display: flex;
+}
+
+/*
+
+
+
+
+*/ /* == ============================================== 
+|          (10.2) CLS. "MEDIA__TITLU"
+|     
+   =================================================== */
+.media__titlu{
+  margin-top: 0;
+}
+
+/*
+
+
+
+
+*/ /* == ============================================== 
+|          (10.3) CLS. "MEDIA__BODY"
+|     
+   =================================================== */
+.media__body {
+  margin: 0 2rem;
+} 
+
+/*
+
+
+
+
+*/ /* == ============================================== 
+|          (10.4) CLS. "MEDIA__IMAGE"
+|     
+   =================================================== */
+.media__image {
+  margin-top: 1rem;
+} 
