--- a/css/style.css
+++ b/css/style.css
@@ -679,8 +679,22 @@ a {
 
 
 
+*/ /* == ============================================== 
+|          (6.3) CLS. "BTN--INTINS" (STRETCHED)
+|     (PT. BTN LUNGI (PE MOBIL))
+   =================================================== */
+.btn--intins {
+  padding-left: 6rem;
+  padding-right: 6rem;
+}
+
+/*
+
+
+
+
 *//* == ============================================== 
-|          (6.3) CLS. "BTN-BLOCK"
+|          (6.4) CLS. "BTN-BLOCK"
 |     ("BUTOANE" PE "INTREAGA LATIME" A "COLOANEI")
    =================================================== */
    .btn-block {
@@ -700,7 +714,7 @@ a {
 
 
 *//* == ============================================== 
-|          (6.4) CLS. "BTN-OUTLINE" (CONTUT)
+|          (6.5) CLS. "BTN-OUTLINE" (CONTUT)
 |     ("BUTOANE" CU "LINIE DE  CONTUR" (FARA CULOARE) )
    =================================================== */
    .btn-outline {
@@ -716,7 +730,7 @@ a {
 
 
 *//* == ============================================== 
-|          (6.4.H) CLS. "BTN-OUTLINE" (CONTUT)
+|          (6.5.H) CLS. "BTN-OUTLINE" (CONTUT)
 |     ("HOVER - BUTOANE" CU "LINIE DE  CONTUR" (FARA CULOARE) )
    =================================================== */
   .btn-outline:hover {
@@ -1413,4 +1427,114 @@ a {
   }
 }
   
+
+
+/*
+
+
+
+
+*/ /*  
+////////////////////////////////////////////////////////
+
+    (XIV) CALLOUTS (MES INSTINTARE)    [MOBILE]
+
+\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+*/ /* == ============================================== 
+|          (14.1) CLS. "CALLOUT"
+|     
+   =================================================== */
+   .callout {
+    padding: 4rem;
+    border-radius: 4px;
+  }
   
+/*
+
+
+
+
+*/ /* == ============================================== 
+|          (14.2) CLS. "CALLOUT--PRINCIPAL"
+|     
+   =================================================== */
+   .callout--principal {
+    background-color: var(--culoare-principala);
+    color: #fff;  
+  }
+  
+/*
+
+
+
+
+*/ /* == ============================================== 
+|          (14.3) CLS. "CALLOUT__TITLU"
+|     
+   =================================================== */
+   .callout__titlu {
+    color: #fff;  
+    margin-top: 0;
+    font-size: 3rem;
+  }
+  
+/*
+
+
+
+
+*/ /* == ============================================== 
+|          (14.4) CLS. "BTN" DIN CLS. "CALLOUT"
+|     
+   =================================================== */
+   .callout .btn {
+     /* ALINIERE "ORIZONTALA" */
+    justify-self: center;
+
+    /* ALINIERE "VERTICALA" */
+    align-self: center;
+  } 
+ 
+  
+/*
+
+
+
+
+*/ /* == ============================================== 
+|          (14.5) CLS. "CALLOUT__CONTINUT"
+|     
+   =================================================== */
+   .callout__continut {
+    text-align: center;
+  } 
+ 
+  
+/*
+
+
+
+
+*/ /* 
+   ////////////////////////////////////////////////////
+|                (XIV) CALLOUT (MES. INSTINTARE) [TABLETA]   
+|         ( @MEDIA  QUERY (LATIME  MINIMA: 1024PX) )
+   \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
+@media screen and (min-width: 768px) {
+ .callout .grid--2-cols {
+   /* SPATUL LIBER DIN COL 2  ESTE ALOCAT COL. 1 */
+   grid-template-columns: 1fr auto;
+ }
+
+ .callout__continut {
+   text-align: left;
+ }
+ 
+ .callout .btn {
+   justify-self: start;
+   
+   /* MARGINI "VERTICAL", "ORIZONTAL" */
+   margin: 0 2rem;
+ }
+}
+
