--- a/_SECTIUNI/BANNERS/css/banners.css
+++ b/_SECTIUNI/BANNERS/css/banners.css
@@ -595,9 +595,6 @@ a {
   /* MARGINI = PE "VERTICAL (SUS.- JOS)",  "ORIZONTAL (ST.- DR)" */
   margin: 1rem 0;
 
-  /* DEZACTIVARE 'CUTIA' CE APARE LA 'CLIC PE BUTON' */
-  outline: 0;
-
   /* DISTANTARE (PADDING) = PE "VERTICAL (SUS.- JOS)",  "ORIZONTAL (ST.- DR)" */
   padding: 2rem 3rem;
 
@@ -616,24 +613,7 @@ a {
 
 
 */ /* == ============================================== 
-|        (6.2) CLS. "ICON" IN CLS. "BTB"
-|             (PT. ICON PE BUTON)
-   =================================================== */
-.btn .icon {
-  width: 2rem;
-  height: 2rem;
-  margin-right: 1rem;
-  vertical-align: middle;
-}
-
-
-/*
-
-
-
-
-*/ /* == ============================================== 
-|          (6.3.1) CLS. "BTN--PRINCIPAL"
+|          (6.2.1) CLS. "BTN--PRINCIPAL"
 |     (PT. CULOARE - BUTON & TEXT)
    =================================================== */
 .btn--principal {
@@ -647,7 +627,7 @@ a {
 
 
 */ /* == ============================================== 
-|          (6.3.1.H) CLS. "BTN--PRINCIPAL:HOVER"
+|          (6.2.1.H) CLS. "BTN--PRINCIPAL:HOVER"
 |     (ADAUGAREA  EFECTULUI HOVER PE BUTON)
    =================================================== */
 .btn--principal:hover {
@@ -663,7 +643,7 @@ a {
 
 
 */ /* == ============================================== 
-|          (6.4.1) CLS. "BTN--SECUNDAR"
+|          (6.2.2) CLS. "BTN--SECUNDAR"
 |     (PT. CULOARE - BUTON & TEXT)
    =================================================== */
 .btn--secundar {
@@ -677,7 +657,7 @@ a {
 
 
 */ /* == ============================================== 
-|          (6.4.2.H) CLS. "BTN--SECUNDAR:HOVER"
+|          (6.2.2.H) CLS. "BTN--SECUNDAR:HOVER"
 |     (ADAUGAREA  EFECTULUI HOVER PE BUTON)
    =================================================== */
 .btn--secundar:hover {
@@ -690,7 +670,7 @@ a {
 
 
 */ /* == ============================================== 
-|          (6.5.1) CLS. "BTN--ACCENT"
+|          (6.2.3) CLS. "BTN--ACCENT"
 |     (PT. CULOARE - BUTON & TEXT)
    =================================================== */
 .btn--accent {
@@ -704,7 +684,7 @@ a {
 
 
 */ /* == ============================================== 
-|          (6.5.2H) CLS. "BTN--ACCENT:HOVER"
+|          (6.2.3.H) CLS. "BTN--ACCENT:HOVER"
 |     (ADAUGAREA  EFECTULUI HOVER PE BUTON)
    =================================================== */
 .btn--accent:hover {
@@ -717,7 +697,7 @@ a {
 
 
 */ /* == ============================================== 
-|          (6.6) CLS. "BTN--INTINS" (STRETCHED)
+|          (6.3) CLS. "BTN--INTINS" (STRETCHED)
 |     (PT. BTN LUNGI (PE MOBIL))
    =================================================== */
 .btn--intins {
@@ -731,7 +711,7 @@ a {
 
 
 *//* == ============================================== 
-|          (6.7) CLS. "BTN-BLOCK"
+|          (6.4) CLS. "BTN-BLOCK"
 |     ("BUTOANE" PE "INTREAGA LATIME" A "COLOANEI")
    =================================================== */
    .btn-block {
@@ -751,10 +731,10 @@ a {
 
 
 *//* == ============================================== 
-|          (6.8.1) CLS. "BTN-OUTLINE" (CONTUT)
+|          (6.5) CLS. "BTN-OUTLINE" (CONTUT)
 |     ("BUTOANE" CU "LINIE DE  CONTUR" (FARA CULOARE) )
    =================================================== */
-.btn-outline {
+   .btn-outline {
 
     background: #fff;
     color: var(--culoare-titluri);
@@ -767,10 +747,10 @@ a {
 
 
 *//* == ============================================== 
-|          (6.8.2H) CLS. "BTN-OUTLINE" (CONTUT)
+|          (6.5.H) CLS. "BTN-OUTLINE" (CONTUT)
 |     ("HOVER - BUTOANE" CU "LINIE DE  CONTUR" (FARA CULOARE) )
    =================================================== */
-.btn-outline:hover {
+  .btn-outline:hover {
 
   background: var(--culoare-titluri);
   color: #fff;
@@ -876,7 +856,7 @@ a {
 
   /* REDUCEM DISTANTA INTRE 'INPUT' & 'INPUT-GROUP' */
   /* VERTICAL (SUS & JOS) & ORIZONTAL (STANGA & DREAPTA) */
-  padding: 1.5rem 2rem;
+  padding: 1.5rem 1rem;
 }
 
  
@@ -975,20 +955,7 @@ a {
 
 
 */ /* == ============================================== 
-|  (8.3.2) CLS. "BADGE--PRINCIPAL" DIN
-|          CLS. "CARD--PRINCIPAL"
-   =================================================== */
-.card--principal .badge--principal{
-  background-color: #126de4;
-}
-
-/*
-
-
-
-
-*/ /* == ============================================== 
-|  (8.4.2.1) CLS. "CARD__SECUNDAR" CU SETARE "CARD__HEADER"
+|  (8.3.2.1) CLS. "CARD__SECUNDAR" CU SETARE "CARD__HEADER"
 |       (PT. DEF. CULORII SECUNDARE)
    =================================================== */
 .card--secundar .card__header{
@@ -1003,7 +970,7 @@ a {
 
 
 */ /* == ============================================== 
-|  (8.4.2.2) CLS. "CARD__SECUNDAR" 
+|  (8.3.2.2) CLS. "CARD__SECUNDAR" 
 |            CU SETARE "BADGE---SECUNDAR"
 |  (PT. DEF. "CULORII BACKGROUND" PT "BADGE SECUNDAR")
    =================================================== */
@@ -1024,21 +991,7 @@ a {
 
 \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
 */ /* == ============================================== 
-|          (9.1) CLS. "PLAN"
-|     (PT. ANIMAREA - PROP. 'TRANSFORM', TIMP DE 02 SEC, EFECT 'EASY-OUT')
-   =================================================== */
-.plan{
-  transition: transform 0.2s ease-out;
-}
-
-
-/*
-
-
-
-
-*//* == ============================================== 
-|          (9.2) CLS. "PLAN__NUME"
+|          (9.1) CLS. "PLAN__NUME"
 |     
    =================================================== */
   .plan__nume{
@@ -1054,7 +1007,7 @@ a {
 
 
 *//* == ============================================== 
-|          (9.3) CLS. "PLAN__PRET"
+|          (9.2) CLS. "PLAN__PRET"
 |     
    =================================================== */
 .plan__pret{
@@ -1067,7 +1020,7 @@ a {
 
 
 *//* == ============================================== 
-|          (9.4) CLS. "PLAN__FACTURARE-CICLU"
+|          (9.3) CLS. "PLAN__FACTURARE-CICLU"
 |     
    =================================================== */
 .plan__facturare-ciclu {
@@ -1083,7 +1036,7 @@ a {
 
 
 *//* == ============================================== 
-|          (9.5) CLS. "PLAN__FACTURARE-CICLU"
+|          (9.3) CLS. "PLAN__FACTURARE-CICLU"
 |     
    =================================================== */
 .plan__descriere {
@@ -1099,7 +1052,7 @@ a {
 
 
 *//* == ============================================== 
-|          (9.6) CLS. "LIST__ITEM" DIN "PLAN"
+|          (9.4) CLS. "LIST__ITEM" DIN "PLAN"
 |     
    =================================================== */
 .plan .list__item {
@@ -1112,23 +1065,7 @@ a {
 
 
 *//* == ============================================== 
-|   (9.7) CLS. "PLAN--POPULAR"
-|   (PT. MARIREA CU 10% A PLANULUI POPULAR)
-   =================================================== */
-.plan--popular {
-  transform: scale(1.1);
-} 
-
-/*
-
-
-/*
-
-
-
-
-*//* == ============================================== 
-|   (9.8) CLS. "CARD-HEADER" PT. "PLAN--POPULAR"
+|   (9.5) CLS. "CARD-HEADER" PT. "PLAN--POPULAR"
 |         (DE CARE SE LEAGA PSEUDOCLASA)
    =================================================== */
 .plan--popular .card__header {
@@ -1141,7 +1078,7 @@ a {
 
 
 *//* == ============================================== 
-|   (9.9) PSEUDO-CLS. "CARD-HEADER::BEFORE" PT. "PLAN--POPULAR"
+|   (9.6) PSEUDO-CLS. "CARD-HEADER::BEFORE" PT. "PLAN--POPULAR"
 |         (PT. INSERARE ICONULUI "POPULAR.SVG")
    =================================================== */
 .plan--popular .card__header::before {
@@ -1151,32 +1088,6 @@ a {
   position: absolute; 
   top: -6px;
   right: 5%;
-} 
-
-/*
-
-
-
-
-*//* == ============================================== 
-|   (9.10:H) CLS. "PLAN:HOVER" 
-|   (PT. EFECT DE MARIRE CU 5% A PLANURILOR)
-   =================================================== */
-.plan:hover {
-  transform: scale(1.05);
-} 
-
-/*
-
-
-
-
-*//* == ============================================== 
-|   (9.11:H) CLS. "PLAN--POPULAR:HOVER" 
-|   (PT. EFECT DE MARIRE CU 5% A PLANURILOR)
-   =================================================== */
-.plan--popular:hover {
-  transform: scale(1.15);
 } 
 
 /*
@@ -2070,13 +1981,13 @@ nav.collapsible--deschis .nav__comutare {
 
 
 */ /*  
-*********************************************************
+////////////////////////////////////////////////////////
 
-           (SEC. 1) BANNER / HERO  [MOBILE]
+           (XVIII) BANNER / HERO  [MOBILE]
 
-*********************************************************
+\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
 */ /* == ============================================== 
-|        (SEC. 1) [1] CLS. "HERO"
+|        (18.1) CLS. "HERO"
 |       (PT. SUPRASCRIEREA POLIGONULUI)
    =================================================== */
 .hero {
@@ -2098,7 +2009,7 @@ nav.collapsible--deschis .nav__comutare {
 
 
 */ /* == ============================================== 
-|         (SEC. 1) [2] CLS. "HERO__SLOGAN"
+|        (18.2) CLS. "HERO__SLOGAN"
 |     
    =================================================== */
 .hero__slogan {
@@ -2115,7 +2026,7 @@ nav.collapsible--deschis .nav__comutare {
 
 
 */  /* == ============================================== 
-|        (SEC. 1) [3] CLS. "HERO__IMAGE"
+|        (18.3) CLS. "HERO__IMAGE"
 |     
    =================================================== */
 .hero__image {
@@ -2129,10 +2040,10 @@ nav.collapsible--deschis .nav__comutare {
 
 
 */ /* 
-********************************************************
-|      (SEC. 1) BANNER / HERO  [TABLETA & DESKTOP]   
+   ////////////////////////////////////////////////////
+|      (XVIII) BANNER / HERO  [TABLETA & DESKTOP]   
 |       ( @MEDIA  QUERY (LATIME  MINIMA: 1024PX) )
-********************************************************
+   \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
 @media screen and (min-width: 768px) {
   .hero{
     padding-top: 0;
@@ -2145,111 +2056,3 @@ nav.collapsible--deschis .nav__comutare {
   }
 } 
    
-
-
-  
-/* 
-
-
-
-
-*/ /*  
-********************************************************
-
-           (SEC. 2) SEC. 'DOMENII WEB' [MOBILE]
-
-********************************************************
-*/ /* == ============================================== 
-|       (SEC. 2) [1] CLS. "INPUT-GROUP" DIN
-|               CLS. "BLOC-DOMENII"
-|          (PT. SECTIUNEA 'DOMENIU')
-   =================================================== */
-.bloc-domenii .input-group {
-  /* VALORI = OFFSET (X Y), BLUR, RADIUS, COLOR  */
-  box-shadow: 0 0 30px 20px #e6ebee;
-
-  border: 0;
-  margin: 4rem auto;
-  max-width: 670px;
-}
-
-/*
-
-
-
-
-*/ /* == ============================================== 
-|    (SEC. 2) [2] CLS. "BLOC-DOMENII__PRETURI"
-|     (PT. LISTE DE PRET PT. 'DOMENIU')
-   =================================================== */
-.bloc-domenii__preturi {
-  /* AFISARE "GRID" */
-  display: grid;
-
-  /* 3 COL (FR = FRACTIUNE) */
-  grid-template-columns: repeat(3, 1fr);
-
-  /* 2RANDURI -- 6REM PT. INALTIMEA RANDURILOR */
-  grid-template-rows: repeat(2, 6rem);
-
-  font-size: 2rem;
-  font-weight: 600;
-  justify-items: center;
-  max-width: 700px;
-  margin: 0 auto;
-}
- 
- 
-/*
-
-
-
- 
-*/ /* 
-********************************************************
-|    (SEC. 2) SEC. 'DOMENII WEB' [TABLETA & DESKTOP]   
-|       ( @MEDIA  QUERY (LATIME  MINIMA: 1024PX) )
-********************************************************
-  @media screen and (min-width: 768px) {
-    .bloc-domenii__preturi {
-      /* NR COL. 'AUTO-FIT', CU DIM. MIN('10REM') & MAX ('1FR')  */
-      grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
-    }
-  } 
-
-
-  
-/* 
-
-
-
-
-*/ /*  
-********************************************************
-
-     (SEC. 3) SEC. 'PLANURI DE ABONARE' [MOBILE]
-
-********************************************************
-*/ /* == ============================================== 
-|      (SEC. 3) [1] CLS. "GRID" DIN
-|                   CLS. "BLOC-PLANURI"
-|                  (PROP. 'GAP' (GOL))
-   =================================================== */
-.bloc-planuri .grid {
- gap: 8rem 4rem;
-}
-
-/*
-
-
-
-
-*/ /* == ============================================== 
-|      (SEC. 3) [2] CLS. "GRID" DIN
-|                   CLS. "BLOC-PLANURI"
-|         
-   =================================================== */
-.bloc-planuri .card{
- max-width: 300px;
- margin: 0 auto;
-}
